--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "deploy": "firebase deploy",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
-    "version:minor": "npm version minor -m "
+    "version:minor": "npm version minor -m ",
+    "version:fix": "npm version fix -m "
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
