--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
     "version:minor": "npm version minor -m ",
-    "version:fix": "npm version fix -m "
+    "version:patch": "npm version patch -m "
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
